--- a/components/navigation.html
+++ b/components/navigation.html
@@ -33,7 +33,7 @@
           ></path>
         </svg>
       </div>
-      <div data-type="MobileMenu" class="mobile-menu navigation-mobile-menu">
+      <div data-type="MobileMenu" class="navigation-mobile-menu mobile-menu">
         <div class="navigation-nav1">
           <div class="navigation-container">
             <img
