--- a/components/navigation-links.html
+++ b/components/navigation-links.html
@@ -13,5 +13,8 @@
     <span class="navigation-links-text3 navigation-Link">
       <span>Menú</span>
     </span>
+    <button class="navigation-links-register button-secondary button button-md">
+      <span>Contactanos</span>
+    </button>
   </nav>
 </div>
