--- a/components/navigation-links.html
+++ b/components/navigation-links.html
@@ -1,18 +1,9 @@
 <div>
   <link href="./navigation-links.css" rel="stylesheet" />
   <nav class="navigation-links-nav">
-    <span class="navigation-links-text navigation-Link">
-      <span>Inicio</span>
-    </span>
-    <span class="navigation-links-text1 navigation-Link">
-      <span>Acerca</span>
-    </span>
-    <span class="navigation-links-text2 navigation-Link">
-      <span>Portofolio</span>
-    </span>
-    <span class="navigation-links-text3 navigation-Link">
-      <span>Menú</span>
-    </span>
+    <span class="navigation-links-text"><span>Inicio</span></span>
+    <span class="navigation-links-text1"><span>Servicios</span></span>
+    <span class="navigation-links-text2"><span>Menú</span></span>
     <button class="navigation-links-register button-secondary button button-md">
       <span>Contactanos</span>
     </button>
