--- a/components/navigation.html
+++ b/components/navigation.html
@@ -9,18 +9,9 @@
       />
       <div class="navigation-nav">
         <nav class="navigation-links-nav navigation-links-root-class-name17">
-          <span class="navigation-links-text navigation-Link">
-            <span>Inicio</span>
-          </span>
-          <span class="navigation-links-text1 navigation-Link">
-            <span>Acerca</span>
-          </span>
-          <span class="navigation-links-text2 navigation-Link">
-            <span>Portofolio</span>
-          </span>
-          <span class="navigation-links-text3 navigation-Link">
-            <span>Menú</span>
-          </span>
+          <span class="navigation-links-text"><span>Inicio</span></span>
+          <span class="navigation-links-text1"><span>Servicios</span></span>
+          <span class="navigation-links-text2"><span>Menú</span></span>
           <button
             class="navigation-links-register button-secondary button button-md"
           >
@@ -55,18 +46,9 @@
             </div>
           </div>
           <nav class="navigation-links-nav navigation-links-root-class-name18">
-            <span class="navigation-links-text navigation-Link">
-              <span>Inicio</span>
-            </span>
-            <span class="navigation-links-text1 navigation-Link">
-              <span>Acerca</span>
-            </span>
-            <span class="navigation-links-text2 navigation-Link">
-              <span>Portofolio</span>
-            </span>
-            <span class="navigation-links-text3 navigation-Link">
-              <span>Menú</span>
-            </span>
+            <span class="navigation-links-text"><span>Inicio</span></span>
+            <span class="navigation-links-text1"><span>Servicios</span></span>
+            <span class="navigation-links-text2"><span>Menú</span></span>
             <button
               class="navigation-links-register button-secondary button button-md"
             >
