--- a/home.css
+++ b/home.css
@@ -7,34 +7,41 @@
 }
 .navigation-links-text {
   cursor: pointer;
+  font-size: 16px;
   transition: 0.3s;
-}
-.navigation-links-text:hover {
-  color: #ff0000;
+  font-family: DM Sans;
+  font-weight: 500;
+  line-height: 1.6;
+  user-select: none;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-decoration: none;
 }
 .navigation-links-text1 {
   cursor: pointer;
+  font-size: 16px;
   transition: 0.3s;
+  font-family: DM Sans;
+  font-weight: 500;
+  line-height: 1.6;
   margin-left: 41px;
-}
-.navigation-links-text1:hover {
-  color: #ff0000;
+  user-select: none;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-decoration: none;
 }
 .navigation-links-text2 {
   cursor: pointer;
+  font-size: 16px;
   transition: 0.3s;
+  font-family: DM Sans;
+  font-weight: 500;
+  line-height: 1.6;
   margin-left: 41px;
-}
-.navigation-links-text2:hover {
-  color: #ff0000;
-}
-.navigation-links-text3 {
-  cursor: pointer;
-  transition: 0.3s;
-  margin-left: 41px;
-}
-.navigation-links-text3:hover {
-  color: #ff0000;
+  user-select: none;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  text-decoration: none;
 }
 .navigation-links-register {
   margin-left: var(--dl-space-space-threeunits);
@@ -67,21 +74,6 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
-  }
-  .navigation-links-text {
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-text1 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-text2 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-  }
-  .navigation-links-text3 {
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
   }
   .navigation-links-register {
     margin-left: 0px;
@@ -120,6 +112,7 @@
   max-width: var(--dl-size-size-maxwidth);
   align-items: center;
   padding-top: var(--dl-space-space-halfunit);
+  user-select: none;
   padding-left: var(--dl-space-space-oneandhalfunits);
   padding-right: var(--dl-space-space-oneandhalfunits);
   padding-bottom: var(--dl-space-space-halfunit);
@@ -246,7 +239,7 @@
   border-radius: var(--dl-radius-radius-radius4);
   margin-bottom: var(--dl-space-space-twounits);
   justify-content: center;
-  background-color: rgba(182, 71, 47, 0.1);
+  background-color: rgba(255, 0, 0, 0.1);
 }
 .services-card-image {
   width: 24px;
@@ -337,9 +330,10 @@
   width: 100%;
   display: flex;
   align-items: flex-start;
+  user-select: none;
   flex-direction: column;
 }
-.home-hero {
+.home-inicio {
   position: relative;
   padding-top: var(--dl-space-space-oneandhalfunits);
   padding-bottom: var(--dl-space-space-oneandhalfunits);
@@ -372,6 +366,7 @@
   font-size: 18px;
   text-align: center;
   line-height: 1.44;
+  user-select: none;
   margin-bottom: var(--dl-space-space-halfunit);
 }
 .home-gallery {
@@ -427,7 +422,7 @@
   object-fit: cover;
   border-radius: var(--dl-radius-radius-radius8);
 }
-.home-services {
+.home-servicios {
   display: flex;
   padding-top: var(--dl-space-space-oneandhalfunits);
   flex-direction: column;
@@ -442,6 +437,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  user-select: none;
   margin-bottom: var(--dl-space-space-halfunit);
   flex-direction: row;
   justify-content: center;
@@ -453,7 +449,7 @@
   flex-direction: column;
 }
 .home-text07 {
-  color: var(--dl-color-scheme-brown);
+  color: #ff0000;
   font-style: normal;
   text-align: center;
   font-weight: 700;
@@ -466,9 +462,18 @@
   display: flex;
   grid-gap: 20px;
 }
-.home-portofolio {
+.home-men {
   padding-top: var(--dl-space-space-oneandhalfunits);
   padding-bottom: var(--dl-space-space-oneandhalfunits);
+}
+.home-text12 {
+  color: rgb(255, 0, 0);
+  font-style: normal;
+  text-align: center;
+  font-weight: 700;
+  margin-bottom: 4px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
 }
 .home-max-width2 {
   flex-direction: column;
@@ -479,12 +484,10 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
+  user-select: none;
   margin-bottom: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
   justify-content: center;
-}
-.home-text12 {
-  margin-right: 30px;
 }
 .home-text13 {
   margin-right: 30px;
@@ -493,7 +496,7 @@
   margin-right: 30px;
 }
 .home-text15 {
-  margin-right: 30px;
+  margin-right: 0px;
 }
 .home-tab-selector-cards-container {
   width: 100%;
@@ -503,7 +506,7 @@
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(3, 1fr);
 }
-.home-contact {
+.home-contacto {
   width: 100%;
   display: flex;
   align-self: center;
@@ -514,11 +517,15 @@
   justify-content: center;
 }
 .home-text16 {
-  margin-top: 0px;
+  color: rgb(255, 0, 0);
+  font-style: normal;
+  text-align: center;
   font-weight: 700;
-  margin-bottom: 0px;
+  margin-bottom: 4px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
 }
-.home-contact1 {
+.home-contact {
   display: flex;
   margin-top: 0px;
   align-items: center;
@@ -538,6 +545,7 @@
 }
 .home-footer {
   padding: var(--dl-space-space-halfunit);
+  user-select: none;
 }
 .home-max-width3 {
   padding-left: 0px;
@@ -545,23 +553,26 @@
   justify-content: space-between;
 }
 .home-image5 {
-  width: 100px;
+  width: 70px;
   object-fit: cover;
 }
 .home-text23 {
+  font-size: 13px;
   align-self: center;
+  text-align: center;
 }
 .home-text25 {
   font-style: normal;
   font-weight: 700;
 }
 @media(max-width: 991px) {
-  .home-hero {
+  .home-inicio {
     padding-top: var(--dl-space-space-unit);
   }
   .home-heading-container {
     max-width: 100%;
-    margin-bottom: 42px;
+    margin-top: 0px;
+    margin-bottom: var(--dl-space-space-unit);
   }
   .home-gallery {
     flex-direction: column;
@@ -570,12 +581,27 @@
     width: 100%;
     flex-direction: row;
   }
+  .home-image {
+    width: 50%;
+  }
+  .home-image1 {
+    width: 50%;
+    height: auto;
+  }
   .home-container2 {
     width: 100%;
   }
   .home-container3 {
     width: 100%;
     flex-direction: row;
+  }
+  .home-image3 {
+    width: 49%;
+    height: auto;
+  }
+  .home-image4 {
+    width: 49%;
+    height: auto;
   }
   .home-heading-container1 {
     margin-top: 0px;
@@ -587,6 +613,7 @@
 }
 @media(max-width: 767px) {
   .home-text {
+    margin-top: var(--dl-space-space-halfunit);
     line-height: 60px;
   }
   .home-container1 {
@@ -594,9 +621,11 @@
     grid-template-columns: 1fr 1fr;
   }
   .home-image {
+    width: 100%;
     height: 287px;
   }
   .home-image1 {
+    width: 100%;
     height: 289px;
   }
   .home-image2 {
@@ -606,16 +635,35 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+  .home-image3 {
+    width: 100%;
+  }
+  .home-image4 {
+    width: 100%;
+  }
   .home-heading-container1 {
     align-items: center;
+    justify-content: center;
+  }
+  .home-cards-container {
+    align-items: center;
+    flex-direction: column;
     justify-content: center;
   }
   .home-tab-selector-cards-container {
     grid-template-columns: 1fr;
   }
+  .home-text16 {
+    color: rgb(255, 0, 0);
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+  }
 }
 @media(max-width: 479px) {
   .home-text {
+    margin-top: var(--dl-space-space-halfunit);
     line-height: 50px;
   }
   .home-image {
@@ -645,16 +693,13 @@
     margin-bottom: var(--dl-space-space-halfunit);
     justify-content: center;
   }
-  .home-contact {
+  .home-contacto {
     margin-top: 0px;
     align-items: center;
     margin-bottom: 0px;
     flex-direction: column;
   }
-  .home-text16 {
-    font-weight: 700;
-  }
-  .home-contact1 {
+  .home-contact {
     align-items: flex-start;
     margin-right: 0px;
     margin-bottom: 0px;
@@ -663,14 +708,14 @@
   .home-max-width3 {
     align-items: center;
     padding-right: 0px;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-between;
   }
   .home-image5 {
     width: 50px;
   }
   .home-text23 {
-    display: none;
+    font-size: 13px;
     text-align: center;
   }
 }
