--- a/home.css
+++ b/home.css
@@ -1,10 +1,119 @@
+html {
+  line-height: 1.15;
+}
+
+body {
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+}
+
+p,
+li,
+ul,
+pre,
+div,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focus,
+[type="button"]:-moz-focus,
+[type="reset"]:-moz-focus,
+[type="submit"]:-moz-focus {
+  outline: 1px dotted ButtonText;
+}
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
+input {
+  padding: 2px 4px;
+}
+
+img {
+  display: block;
+  -webkit-user-drag: none;
+  user-select: none;
+}
+
+html {
+  scroll-behavior: smooth
+}
+
+html {
+  font-family: DM Sans;
+  font-size: 16px;
+}
+
+body {
+  font-weight: 400;
+  font-style: normal;
+  text-decoration: none;
+  text-transform: undefined;
+  letter-spacing: normal;
+  line-height: 1.3;
+  color: var(--dl-color-scheme-darkblue);
+  background-color: var(--dl-color-scheme-white);
+
+}
+
+a{
+  -webkit-user-drag: none;
+}
+
 .navigation-links-nav {
   flex: 0 0 auto;
   display: flex;
   align-items: center;
   flex-direction: row;
   justify-content: center;
+  -webkit-user-drag: none;
 }
+
 .navigation-links-text {
   cursor: pointer;
   font-size: 16px;
@@ -16,10 +125,13 @@
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-decoration: none;
+  -webkit-user-drag: none;
 }
+
 .navigation-links-text:hover {
   box-shadow: inset 0px -2px 0px #FF0000;
 }
+
 .navigation-links-text1 {
   cursor: pointer;
   font-size: 16px;
@@ -32,10 +144,13 @@
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-decoration: none;
+  -webkit-user-drag: none;
 }
+
 .navigation-links-text1:hover {
   box-shadow: inset 0px -2px 0px #FF0000;
 }
+
 .navigation-links-text2 {
   cursor: pointer;
   font-size: 16px;
@@ -48,10 +163,13 @@
   letter-spacing: 0.02em;
   text-transform: capitalize;
   text-decoration: none;
+  -webkit-user-drag: none;
 }
+
 .navigation-links-text2:hover {
   box-shadow: inset 0px -2px 0px #FF0000;
 }
+
 .navigation-links-register {
   margin-left: var(--dl-space-space-threeunits);
 }
@@ -66,52 +184,65 @@
 .navigation-links-root-class-name17 {
   margin-right: 0px;
 }
+
 .navigation-links-root-class-name18 {
   align-self: center;
 }
+
 @media(max-width: 991px) {
   .navigation-links-nav {
     align-items: center;
     justify-content: center;
   }
+
   .navigation-links-root-class-name18 {
     align-self: center;
   }
 }
+
 @media(max-width: 767px) {
   .navigation-links-nav {
     align-items: center;
     flex-direction: column;
     justify-content: center;
   }
+
   .navigation-links-text1 {
     margin-left: 0px;
   }
+
   .navigation-links-text2 {
     margin-left: 0px;
   }
+
   .navigation-links-register {
     margin-left: 0px;
     margin-bottom: 0px;
   }
+
   .navigation-links-root-class-name18 {
     align-self: center;
   }
 }
+
 @media(max-width: 479px) {
   .navigation-links-nav {
     align-items: center;
     justify-content: center;
   }
+
   .navigation-links-text1 {
     margin-left: 0px;
   }
+
   .navigation-links-text2 {
     margin-left: 0px;
   }
+
   .navigation-links-register {
     margin-left: 0px;
   }
+
   .navigation-links-root-class-name18 {
     align-self: center;
   }
@@ -127,6 +258,7 @@
   justify-content: center;
   background-color: var(--dl-color-scheme-white);
 }
+
 .navigation-max-width {
   width: 100%;
   display: flex;
@@ -139,35 +271,42 @@
   padding-bottom: var(--dl-space-space-halfunit);
   justify-content: space-between;
 }
+
 .navigation-image {
   width: 100px;
   object-fit: cover;
 }
+
 .navigation-nav {
   flex: 0 0 auto;
   display: flex;
   align-items: center;
   flex-direction: row;
 }
+
 .navigation-burger-menu {
   display: none;
 }
+
 .navigation-icon {
   fill: var(--dl-color-scheme-darkblue);
   width: 24px;
   height: 24px;
   display: flex;
 }
+
 .navigation-mobile-menu {
   height: auto;
   padding: var(--dl-space-space-unit);
 }
+
 .navigation-nav1 {
   display: flex;
   align-items: flex-start;
   margin-bottom: var(--dl-space-space-oneandhalfunits);
   flex-direction: column;
 }
+
 .navigation-container {
   width: 100%;
   display: flex;
@@ -176,67 +315,83 @@
   margin-bottom: 0px;
   justify-content: space-between;
 }
+
 .navigation-image1 {
   width: 100px;
   object-fit: cover;
 }
+
 .navigation-close-mobile-menu {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .navigation-icon2 {
   width: 24px;
   height: 24px;
 }
+
 @media(max-width: 991px) {
   .navigation-nav {
     display: none;
   }
+
   .navigation-burger-menu {
     display: flex;
   }
+
   .navigation-mobile-menu {
     height: auto;
     padding: var(--dl-space-space-unit);
   }
+
   .navigation-container {
     position: relative;
   }
+
   .navigation-close-mobile-menu {
     position: static;
   }
 }
+
 @media(max-width: 767px) {
   .navigation-max-width {
     padding: var(--dl-space-space-unit);
   }
+
   .navigation-mobile-menu {
     height: auto;
     padding: var(--dl-space-space-unit);
   }
+
   .navigation-container {
     position: relative;
   }
+
   .navigation-close-mobile-menu {
     position: static;
     align-items: center;
     justify-content: center;
   }
 }
+
 @media(max-width: 479px) {
   .navigation-mobile-menu {
     height: auto;
   }
+
   .navigation-nav1 {
     margin-bottom: 0px;
   }
+
   .navigation-container {
     position: relative;
     align-items: center;
     margin-bottom: 0px;
     justify-content: space-between;
   }
+
   .navigation-close-mobile-menu {
     position: static;
     align-items: center;
@@ -252,6 +407,7 @@
   padding-bottom: var(--dl-space-space-halfunit);
   justify-content: center;
 }
+
 .services-card-container {
   width: 56px;
   height: 56px;
@@ -262,17 +418,20 @@
   justify-content: center;
   background-color: rgba(255, 0, 0, 0.1);
 }
+
 .services-card-image {
   width: 24px;
   height: 24px;
   object-fit: contain;
 }
+
 .services-card-text {
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
   margin-bottom: var(--dl-space-space-halfunit);
 }
+
 .services-card-text1 {
   margin-top: 0px;
   text-align: center;
@@ -285,6 +444,7 @@
   align-items: flex-start;
   flex-direction: column;
 }
+
 .portofolio-card-image-container {
   width: 100%;
   height: 100%;
@@ -298,6 +458,7 @@
   flex-direction: column;
   justify-content: flex-end;
 }
+
 .portofolio-card-image {
   left: 0px;
   width: 100%;
@@ -307,6 +468,7 @@
   object-fit: cover;
   border-radius: var(--dl-radius-radius-radius8);
 }
+
 .portofolio-card-see-project-container {
   flex: 1;
   width: 100%;
@@ -321,6 +483,7 @@
   flex-direction: row;
   justify-content: center;
 }
+
 .portofolio-card-first-name {
   font-size: 18px;
   font-style: normal;
@@ -346,6 +509,7 @@
   align-items: center;
   flex-direction: column;
 }
+
 .home-main {
   flex: 0 0 auto;
   width: 100%;
@@ -354,15 +518,18 @@
   user-select: none;
   flex-direction: column;
 }
+
 .home-inicio {
   position: relative;
   padding-top: var(--dl-space-space-oneandhalfunits);
   padding-bottom: var(--dl-space-space-oneandhalfunits);
 }
+
 .home-max-width {
   margin-top: var(--dl-space-space-threeunits);
   background-color: #FF000000;
 }
+
 .home-heading-container {
   flex: 1;
   display: flex;
@@ -371,6 +538,7 @@
   flex-direction: column;
   justify-content: center;
 }
+
 .home-text {
   font-size: 56px;
   text-align: center;
@@ -382,6 +550,7 @@
   letter-spacing: 0.01em;
   text-decoration: none;
 }
+
 .home-text03 {
   color: var(--dl-color-scheme-black);
   font-size: 18px;
@@ -390,12 +559,14 @@
   user-select: none;
   margin-bottom: var(--dl-space-space-halfunit);
 }
+
 .home-gallery {
   width: 100%;
   display: flex;
   grid-gap: 20px;
   align-items: stretch;
 }
+
 .home-container1 {
   width: 33%;
   display: flex;
@@ -403,27 +574,32 @@
   align-items: stretch;
   flex-direction: column;
 }
+
 .home-image {
   width: 100%;
   object-fit: cover;
   border-radius: var(--dl-radius-radius-radius8);
 }
+
 .home-image1 {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: var(--dl-radius-radius-radius8);
 }
+
 .home-container2 {
   width: 33%;
   align-self: stretch;
 }
+
 .home-image2 {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: var(--dl-radius-radius-radius8);
 }
+
 .home-container3 {
   width: 33%;
   display: flex;
@@ -431,18 +607,21 @@
   align-items: stretch;
   flex-direction: column;
 }
+
 .home-image3 {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: var(--dl-radius-radius-radius8);
 }
+
 .home-image4 {
   width: 100%;
   height: 95%;
   object-fit: cover;
   border-radius: var(--dl-radius-radius-radius8);
 }
+
 .home-servicios {
   display: flex;
   padding-top: var(--dl-space-space-oneandhalfunits);
@@ -450,9 +629,11 @@
   padding-bottom: var(--dl-space-space-oneandhalfunits);
   background-color: rgba(255, 0, 0, 0);
 }
+
 .home-max-width1 {
   flex-direction: column;
 }
+
 .home-heading-container1 {
   flex: 0 0 auto;
   width: 100%;
@@ -463,12 +644,14 @@
   flex-direction: row;
   justify-content: center;
 }
+
 .home-text-container {
   display: flex;
   text-align: center;
   align-items: center;
   flex-direction: column;
 }
+
 .home-text07 {
   color: #ff0000;
   font-style: normal;
@@ -478,15 +661,18 @@
   letter-spacing: 0.1em;
   text-transform: uppercase;
 }
+
 .home-cards-container {
   width: 100%;
   display: flex;
   grid-gap: 20px;
 }
+
 .home-men {
   padding-top: var(--dl-space-space-oneandhalfunits);
   padding-bottom: var(--dl-space-space-oneandhalfunits);
 }
+
 .home-text12 {
   color: rgb(255, 0, 0);
   font-style: normal;
@@ -496,9 +682,11 @@
   letter-spacing: 0.1em;
   text-transform: uppercase;
 }
+
 .home-max-width2 {
   flex-direction: column;
 }
+
 .home-tab-selector-header {
   flex: 0 0 auto;
   width: 100%;
@@ -510,15 +698,19 @@
   flex-direction: row;
   justify-content: center;
 }
+
 .home-text13 {
   margin-right: 30px;
 }
+
 .home-text14 {
   margin-right: 30px;
 }
+
 .home-text15 {
   margin-right: 0px;
 }
+
 .home-tab-selector-cards-container {
   width: 100%;
   display: grid;
@@ -527,6 +719,7 @@
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(3, 1fr);
 }
+
 .home-contacto {
   width: 100%;
   display: flex;
@@ -537,6 +730,7 @@
   padding-bottom: var(--dl-space-space-oneandhalfunits);
   justify-content: center;
 }
+
 .home-text16 {
   color: rgb(255, 0, 0);
   font-style: normal;
@@ -546,6 +740,7 @@
   letter-spacing: 0.1em;
   text-transform: uppercase;
 }
+
 .home-contact {
   display: flex;
   margin-top: 0px;
@@ -555,125 +750,156 @@
   flex-direction: row;
   justify-content: center;
 }
+
 .home-icon {
   width: 24px;
   height: 24px;
 }
+
 .home-icon2 {
   width: 24px;
   height: 24px;
   margin-right: 0px;
 }
+
 .home-footer {
   padding: var(--dl-space-space-halfunit);
   user-select: none;
 }
+
 .home-max-width3 {
   padding-left: 0px;
   flex-direction: row;
   justify-content: space-between;
 }
+
 .home-image5 {
   width: 70px;
   object-fit: cover;
 }
+
 .home-text23 {
   font-size: 13px;
   align-self: center;
   text-align: center;
 }
+
 .home-text25 {
   font-style: normal;
   font-weight: 700;
 }
+
 @media(max-width: 991px) {
   .home-inicio {
     padding-top: var(--dl-space-space-unit);
   }
+
   .home-heading-container {
     max-width: 100%;
     margin-top: 0px;
     margin-bottom: var(--dl-space-space-unit);
   }
+
   .home-gallery {
     flex-direction: column;
   }
+
   .home-container1 {
     width: 100%;
     flex-direction: row;
   }
+
   .home-image {
     width: 50%;
   }
+
   .home-image1 {
     width: 50%;
     height: auto;
   }
+
   .home-container2 {
     width: 100%;
   }
+
   .home-container3 {
     width: 100%;
     flex-direction: row;
   }
+
   .home-image3 {
     width: 49%;
     height: auto;
   }
+
   .home-image4 {
     width: 49%;
     height: auto;
   }
+
   .home-heading-container1 {
     margin-top: 0px;
     justify-content: center;
   }
+
   .home-tab-selector-cards-container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
 @media(max-width: 767px) {
   .home-text {
     margin-top: var(--dl-space-space-halfunit);
     line-height: 60px;
   }
+
   .home-container1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+
   .home-image {
     width: 100%;
     height: 287px;
   }
+
   .home-image1 {
     width: 100%;
     height: 289px;
   }
+
   .home-image2 {
     height: 477px;
   }
+
   .home-container3 {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+
   .home-image3 {
     width: 100%;
   }
+
   .home-image4 {
     width: 100%;
   }
+
   .home-heading-container1 {
     align-items: center;
     justify-content: center;
   }
+
   .home-cards-container {
     align-items: center;
     flex-direction: column;
     justify-content: center;
   }
+
   .home-tab-selector-cards-container {
     grid-template-columns: 1fr;
   }
+
   .home-text16 {
     color: rgb(255, 0, 0);
     font-style: normal;
@@ -682,59 +908,72 @@
     text-transform: uppercase;
   }
 }
+
 @media(max-width: 479px) {
   .home-text {
     margin-top: var(--dl-space-space-halfunit);
     line-height: 50px;
   }
+
   .home-image {
     height: 214px;
   }
+
   .home-image1 {
     height: 216px;
   }
+
   .home-image2 {
     height: 360px;
   }
+
   .home-image4 {
     width: 100%;
     height: auto;
   }
+
   .home-heading-container1 {
     margin-top: 0px;
     margin-bottom: 0px;
   }
+
   .home-cards-container {
     align-items: center;
     flex-direction: column;
     justify-content: center;
   }
+
   .home-tab-selector-header {
     align-items: center;
     margin-bottom: var(--dl-space-space-halfunit);
     justify-content: center;
   }
+
   .home-contacto {
     margin-top: 0px;
     align-items: center;
     margin-bottom: 0px;
     flex-direction: column;
   }
+
   .home-contact {
     align-items: flex-start;
     margin-right: 0px;
     margin-bottom: 0px;
     flex-direction: row;
   }
+
   .home-max-width3 {
     align-items: center;
     padding-right: 0px;
     flex-direction: row;
     justify-content: space-between;
   }
+
   .home-image5 {
     width: 50px;
   }
+
   .home-text23 {
     font-size: 13px;
     text-align: center;
