--- a/components/portofolio-card.html
+++ b/components/portofolio-card.html
@@ -10,7 +10,7 @@
       <div class="portofolio-card-see-project-container"></div>
     </div>
     <span class="portofolio-card-first-name">
-      <span>Office Life Campaign - Boost your creativity</span>
+      <span>Portofolio Card</span>
     </span>
   </div>
 </div>
